Home,profile, today page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   fluttertoast: ^9.0.0
   another_flushbar: ^1.12.32
   image_picker: ^1.2.0
+  haptic_feedback: ^0.5.1+1
 
 
 dev_dependencies:
