--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   another_flushbar: ^1.12.32
   image_picker: ^1.2.0
   haptic_feedback: ^0.5.1+1
+  speech_to_text: ^7.3.0
 
 
 dev_dependencies:
