--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   image_picker: ^1.2.0
   haptic_feedback: ^0.5.1+1
   speech_to_text: ^7.3.0
+  uuid: ^4.5.1
+  flutter_advanced_switch: ^3.1.0
+  flutter_tabler_icons: ^1.43.0
+  file_picker: ^10.3.3
 
 
 dev_dependencies:
