--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter_advanced_switch: ^3.1.0
   flutter_tabler_icons: ^1.43.0
   file_picker: ^10.3.3
+  timelines_plus: ^1.0.8
+#  firebase_core: 2.17.0
+#  firebase_auth: 4.10.1
+#  sign_in_button: 3.2.0
 
 
 dev_dependencies:
