--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,17 @@ dependencies:
   another_flushbar: ^1.12.32
   image_picker: ^1.2.0
   haptic_feedback: ^0.5.1+1
-  speech_to_text: ^7.3.0
+  speech_to_text: ^7.0.0
   uuid: ^4.5.1
   flutter_advanced_switch: ^3.1.0
   flutter_tabler_icons: ^1.43.0
   file_picker: ^10.3.3
   timelines_plus: ^1.0.8
+  record: ^6.1.2
+  path_provider: ^2.1.1
+  http: ^1.2.2
+  permission_handler: ^11.3.1
+
 #  firebase_core: 2.17.0
 #  firebase_auth: 4.10.1
 #  sign_in_button: 3.2.0
