--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   path_provider: ^2.1.1
   http: ^1.2.2
   permission_handler: ^11.3.1
+  shared_preferences: ^2.5.3
+  jwt_decoder: ^2.0.1
 
 #  firebase_core: 2.17.0
 #  firebase_auth: 4.10.1
