--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^11.3.1
   shared_preferences: ^2.5.3
   jwt_decoder: ^2.0.1
+  webview_flutter: ^4.7.0
 
 #  firebase_core: 2.17.0
 #  firebase_auth: 4.10.1
