--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,30 +26,26 @@ dependencies:
   another_flushbar: ^1.12.32
   image_picker: ^1.2.0
   haptic_feedback: ^0.5.1+1
-  speech_to_text: ^7.0.0
+  speech_to_text: ^7.3.0
   uuid: ^4.5.1
   flutter_advanced_switch: ^3.1.0
   flutter_tabler_icons: ^1.43.0
   file_picker: ^10.3.3
-  timelines_plus: ^1.0.8
-  record: ^6.1.2
-  path_provider: ^2.1.1
-  http: ^1.2.2
-  permission_handler: ^11.3.1
-  shared_preferences: ^2.5.3
-  jwt_decoder: ^2.0.1
-  webview_flutter: ^4.7.0
-
-#  firebase_core: 2.17.0
-#  firebase_auth: 4.10.1
-#  sign_in_button: 3.2.0
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
+  google_sign_in: ^6.2.0
+  sign_in_with_apple: ^7.0.1
 
 
-dev_dependencies:
+dev_dependencies:  
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  webview_flutter: ^4.13.0
+  shared_preferences: ^2.5.4
+  permission_handler: ^12.0.1
 
 flutter:
 
