--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cloud_firestore: ^6.0.3
   google_sign_in: ^6.2.0
   sign_in_with_apple: ^7.0.1
+  firebase_messaging: ^16.0.4
+  flutter_local_notifications: ^19.5.0
 
 
 dev_dependencies:  
@@ -46,6 +48,7 @@ dev_dependencies:
   webview_flutter: ^4.13.0
   shared_preferences: ^2.5.4
   permission_handler: ^12.0.1
+  flutter_dotenv: ^6.0.0
 
 flutter:
 
